fixed spacing with contact section

--- a/dest/styles/main.css
+++ b/dest/styles/main.css
@@ -186,6 +186,15 @@ a:hover {
     margin-bottom: 40px;
 }
 
+.topic-text:last-child {
+    margin-bottom: 0;
+}
+
+.contact {
+    padding: 10px 0;
+    margin-bottom: 10px;
+}
+
 .footer {
     display: -webkit-box;
     display: -ms-flexbox;
